package edu.seaport;

import java.util.Scanner;

/**
 * File Job.java
 * As the project progresses the class will be added to.
 * @author Lance Gundersen
 * @version 1.0
 * @since 2018-11-03
 *
 */
class Job extends Thing {

    /**
     * Default Constructor.
     * @param scannerContents is the file contents to be scanned.
     * @return Nothing.
     */
    Job(Scanner scannerContents) {
        super(scannerContents);
    }
}
